[FIX] alignment

--- a/css/style.css
+++ b/css/style.css
@@ -41,14 +41,8 @@ ul li{
     width: 100px;
     height: 100px;
     margin: 20px;
-    position: relative;
-}
-
-span{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    text-align: center;
+    line-height: 100px;
 }
 
 
